# OIBSIP

./: .gitignore
Python-Task1-AIVoiceAssistant/: agent.py  functions.py  mcp_server.py  pyproject.toml  requirements.txt  server.py  test_gemini.py
Python-Task1-AIVoiceAssistant/assistant/: config.py
Python-Task1-AIVoiceAssistant/assistant/memory/: chat_history.json  history.py
Python-Task1-AIVoiceAssistant/assistant/prompts/: system_prompt.txt
Python-Task1-AIVoiceAssistant/assistant/tools/: news.py  weather.py
Python-Task1-Weather_App/: README.md  config.py  main.py  requirements.txt  weather_api.py
Python-Task2-BMI_Calculator/: README.md  bmi_records.db  bmi_utils.py  database.py  main.py  requirements.txt
Python-Task3-Password-Generator/: README.md  gui.py  main.py  password_generator.py  password_history.txt  requirements.txt
