[project]
name = "aivoiceassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.3",
    "google-genai>=2.10.0",
    "livekit>=1.1.12",
    "livekit-agents[google,silero]~=1.6",
    "livekit-plugins-ai-coustics>=0.3.0",
    "livekit-plugins-google>=1.6.4",
    "livekit-plugins-noise-cancellation>=0.2.6",
    "livekit-plugins-openai>=1.6.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
